syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.livematch";
//option go_package = "livematch";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "request.proto";
import "prediction.proto";

package model;

service LiveMatchService {
    rpc GetUpcomingMatches (google.protobuf.Empty) returns (stream UpcomingMatchesResponse) {}
    rpc GetMatchSummary (PredictionRequest) returns (stream MatchSummary) {}
}

message UpcomingMatchesResponse {
    map<string, MatchFactsList> matches = 1;
}

message MatchSummary {
    MatchFacts match = 1;
    MatchPredictionSummary predictionSummary = 2;
    Prediction prediction = 3;
}

message MatchFactsList {
    repeated MatchFacts matches = 1;
}

message MatchFacts {
    string id = 1;
    string compId = 2;
    string formattedDate = 3;
    string season = 4;
    string week = 5;
    string venue = 6;
    string venueId = 7;
    string venueCity = 8;
    string status = 9;
    string timer = 10;
    string time = 11;
    string localTeamId = 12;
    string localTeamName = 13;
    string localTeamScore = 14;
    string visitorTeamId = 15;
    string visitorTeamName = 16;
    string visitorTeamScore = 17;
    string htScore = 18;
    string ftScore = 19;
    string etScore = 20;
    string penaltyLocal = 21;
    string penaltyVisitor = 22;
    repeated Event events = 23;
    Commentary commentary = 24;
    google.protobuf.Timestamp matchDate = 25;
}

message Event {
    string id = 1;
    string type = 2;
    string result = 3;
    string minute = 4;
    string extraMin = 5;
    string team = 6;
    string player = 7;
    string playerId = 8;
    string assist = 9;
    string assistId = 10;
}

message Commentary {
    string matchId = 1;
    repeated MatchInfo matchInfo = 2;
    Lineup lineup = 3;
    Lineup subs = 4;
    Substitutions substitutions = 5;
    repeated Comment comments = 6;
    MatchStats matchStats = 7;
    PlayerStats playerStats = 8;
}

message MatchInfo {
    string stadium = 1;
    string attendance = 2;
    string referee = 3;
}

message Lineup {
    repeated Position localTeam = 1;
    repeated Position visitorTeam = 3;
}

message Position {
    string id = 1;
    string number = 2;
    string name = 3;
    string pos = 4;
}

message Substitutions {
    repeated Substitution localTeam = 1;
    repeated Substitution visitorTeam = 2;
}

message Substitution {
    string offName = 1;
    string onName = 2;
    string offId = 3;
    string onId = 4;
    string minute = 5;
    string tableId = 6;
}

message Comment {
    string id = 1;
    string important = 2;
    string goal = 3;
    string minute = 4;
    string comment = 5;
}

message MatchStats {
    repeated TeamStats localTeam = 1;
    repeated TeamStats visitorTeam = 2;
}

message TeamStats {
    string shotsTotal = 1;
    string shotsOnGoal = 2;
    string fouls = 3;
    string corners = 4;
    string offsides = 5;
    string possessionTime = 6;
    string yellowCards = 7;
    string redCards = 8;
    string saves = 9;
    string tableId = 10;
}

message PlayerStats {
    Players localTeam = 1;
    Players visitorTeam = 2;
}

message Players {
    repeated Player player = 1;
}

message Player {
    string id = 1;
    string num = 2;
    string name = 3;
    string pos = 4;
    string posX = 5;
    string posY = 6;
    string shotsTotal = 7;
    string shotsOnGoal = 8;
    string goals = 9;
    string assists = 10;
    string offsides = 11;
    string foulsDrawn = 12;
    string foulsCommitted = 13;
    string saves = 14;
    string yellowCards = 15;
    string redCards = 16;
    string penScore = 17;
    string penMiss = 18;
}